version 1.3.4
- Increase max length of gretl script command line to 4095 bytes
- Add support for decennial data
- Fix for finding TrueType graph fonts on Windows 2000
- Add new "set" option: "horizon", to configure horizon for impulse
  responses in context of VARs
- Disable autocorrelation and ARCH tests in gui model test menu,
  in case of cross-sectional data
- Add Local Whittle Estimator for fractional integration, in context
  of periodogram command
- Add fracdiff function (fractional differencing) to the genr
  command
- In correlogram (acf) output, show calculated 5% critical value
- Correlogram: acf calculations should not use more than 20 percent
  of the available data by default (Tadeusz Kufel)
- Fix bug in Tobit command in the gretl GUI
- "omit" command: add asymptotic Wald test for joint significance
  of omitted variables, for estimators other than OLS
- ADF test: allow greater lag length if the data permit
- Add facility to import GNU Octave ascii data files
- Improvements to formatting in Spanish translation
- Improvements to several dialog boxes

03/14/2005 version 1.3.3
- Add "poisson" command (thanks to Jack Lucchetti)
- Fix memory leak in VAR command with impulse responses, in the
  command-line program
- Fix bug: possible crash in "loop foreach" if an invalid variable
  name is given
- Fix bug: "display data" broken in gui program for long datasets
  ("press a key to continue" mechanism was invoked erroneously)
- Fix bug: wrong variable shown when you select "Display actual,
  fitted, residual" for a GARCH model
- Fix bug: hausman test for pooled model would crash if there
  were not sufficient degrees of freedom to estimate the group
  means model
- Fix bug: crash if default data and script files not installed
  with program (thanks to Ignacio and Dirk for finding this)
- Fix bug in genr: unary minus could be wrongly handled within the
  argument to a function
- Fixes for appending data (make more flexible: allow appending of