@@ -69,6 +69,9 @@ int checks_dialog (const char *title, const char **opts, int nopts,
 		   int *active, int *spinval, const char *spintext, 
 		   int spinmin, int spinmax, int helpcode);
 
+int spin_dialog (const char *title, int *spinval, const char *spintext, 
+		 int spinmin, int spinmax, int helpcode);
+
 int get_obs_dialog (const char *title, const char *text,
 		    const char *t1str, const char *t2str,
 		    int t1min, int t1max, int *t1, 
