@@ -3,7 +3,8 @@ version 1.3.4
 - Add support for decennial data
 - Fix for finding TrueType graph fonts on Windows 2000
 - Add new "set" option: "horizon", to configure horizon for impulse
-  responses in context of VARs
+  responses in context of VARs; also add dialog box to set horizon
+  for impulse response graphs in GUI
 - Disable autocorrelation and ARCH tests in gui model test menu,
   in case of cross-sectional data
 - Add Local Whittle Estimator for fractional integration, in context
